Fix nav collapsing too small

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -2,6 +2,7 @@
 
 .child.nav {
     flex: 0 1 150px;
+    min-width: 150px;
     display: flex;
     flex-direction: column;
     background: #191818;
